--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,13 @@
   background-color: #f5f3ff;
 }
 
-body {
+body,
+h2,
+p {
   margin: 0;
 }
 
 img {
   max-height: 100%;
+  object-fit: contain;
 }
