--- a/src/styles/home.module.css
+++ b/src/styles/home.module.css
@@ -1,4 +1,8 @@
 .container {
   display: grid;
+  grid-template-columns: repeat(auto-fill, 300px);
+  justify-items: center;
+  justify-content: center;
   gap: 24px;
+  padding: 24px;
 }
