--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,12 @@ p {
   margin: 0;
 }
 
+h2 {
+  font-size: 1.1em;
+  font-family: Georgia, "Times New Roman", Times, serif;
+  font-weight: normal;
+}
+
 img {
   max-height: 100%;
   object-fit: contain;
