--- a/src/styles/Product.module.css
+++ b/src/styles/Product.module.css
@@ -8,7 +8,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: white;
+  background-color: #fae8ff;
   padding: 24px;
   height: 425px;
   font-size: x-large;
